// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxImage customize one 1`] = `
<div>
  <img
    class="float-end"
  />
</div>
`;

exports[`CxImage customize two 1`] = `
<div>
  <img
    class="d-block mx-auto img-fluid rounded img-thumbnail bazinga"
  />
</div>
`;

exports[`loads and displays CxImage component 1`] = `
<div>
  <img
    class=""
  />
</div>
`;
